RESOLVED FIXED242018
REGRESSION (248034@main): Safari crashes when focusing text field on srsre.com
https://bugs.webkit.org/show_bug.cgi?id=242018
Summary REGRESSION (248034@main): Safari crashes when focusing text field on srsre.com
Wenson Hsieh
Reported 2022-06-26 18:14:25 PDT
Attachments
Wenson Hsieh
Comment 1 2022-06-26 20:05:45 PDT
EWS
Comment 2 2022-06-27 12:56:58 PDT
Committed 251885@main (adc281052919): <https://commits.webkit.org/251885@main> Reviewed commits have been landed. Closing PR #1811 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.