Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -5030,6 +5030,8 @@ static void selectionChangedWithTouch(WKContentView *view, const WebCore::IntPoi
         return;
     }
 
+    SetForScope requestAutocorrectionContextScope { _isRequestingAutocorrectionContext, YES };
+
     _pendingAutocorrectionContextHandler = completionHandler;
     _page->requestAutocorrectionContext();
 
@@ -6730,6 +6732,14 @@ static RetainPtr<NSObject <WKFormPeripheral>> createInputPeripheralWithView(WebK
 
 - (void)_elementDidFocus:(const WebKit::FocusedElementInformation&)information userIsInteracting:(BOOL)userIsInteracting blurPreviousNode:(BOOL)blurPreviousNode activityStateChanges:(OptionSet<WebCore::ActivityState::Flag>)activityStateChanges userObject:(NSObject <NSSecureCoding> *)userObject
 {
+    if (_isRequestingAutocorrectionContext) {
+        RunLoop::main().dispatch([weakSelf = WeakObjCPtr<WKContentView> { self }, information, userIsInteracting, blurPreviousNode, activityStateChanges, userObject = RetainPtr { userObject } ] {
+            if (auto strongSelf = weakSelf.get())
+                [strongSelf _elementDidFocus:information userIsInteracting:userIsInteracting blurPreviousNode:blurPreviousNode activityStateChanges:activityStateChanges userObject:userObject.get()];
+        });
+        return;
+    }
+
     SetForScope isChangingFocusForScope { _isChangingFocus, self._hasFocusedElement };
     SetForScope isFocusingElementWithKeyboardForScope { _isFocusingElementWithKeyboard, [self _shouldShowKeyboardForElement:information] };
 
@@ -6910,6 +6920,14 @@ static RetainPtr<NSObject <WKFormPeripheral>> createInputPeripheralWithView(WebK
 
 - (void)_elementDidBlur
 {
+    if (_isRequestingAutocorrectionContext) {
+        RunLoop::main().dispatch([weakSelf = WeakObjCPtr<WKContentView> { self }] {
+            if (auto strongSelf = weakSelf.get())
+                [strongSelf _elementDidBlur];
+        });
+        return;
+    }
+
     SetForScope isBlurringFocusedElementForScope { _isBlurringFocusedElement, YES };
 
     [self _endEditing];
